--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <path d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/>
           </svg>
         </div>
-        <span class="share-popup">SHARE <ul>
+        <div class="share-popup">SHARE <ul>
           <li><img src="images/icon-facebook.svg" alt="Facebook"></li>
           <li><img src="images/icon-twitter.svg" alt="Twitter"></li>
           <li><img src="images/icon-pinterest.svg" alt="Pinterest"></li>
         </ul>
-      </span>
+      </div>
       </div>
     </div>
   </div>
